src/main/metadata/objects/Opp_Escalation__mdt.object
<CustomObject>
    <fields>
        <fullName>BusinessHrCountry__c</fullName>
        <label>BusinessHrCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cold_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cold Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hot_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hot Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leadownerreassign__c</fullName>
        <label>Leadownerreassign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassign_Leadowner__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'TR') ,'005280000065yg8AAA', 
IF(ISPICKVAL($User.Market__c, 'KR'), '0050l000001HU0e',''))</defaultValue>
        <label>Reassign Leadowner</label>
        <picklist>
            <picklistValues>
                <fullName>0050l000001HU0e</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>005280000065yg8</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpiryState__c</fullName>
        <label>SLAExpiryState</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Expiry_after_2hrs__c</fullName>
        <label>SLA Expiry after 2hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SentReminder1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SentReminder1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warm_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Warm Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opp Escalation</label>
    <pluralLabel>Opp Escalation</pluralLabel>
</CustomObject>